# piezomag

./: .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
doc/: deriv_x_y_z.dvi  deriv_x_y_z.tex  deriv_x_y_z.tex.back  deriv_xi_et_qq.tex  elementary_pmp.tex
include/: Makefile.am  constants.h  piez.h  piezomag.h  private.h
main/: Makefile.am  main.c  test.c
pkgconfig/: piezomag.pc.in
src/: Makefile.am  common.c  deriv.c  deriv_dipoles.c  deriv_octpoles.c  deriv_quadpoles.c  dip_slip.c  params_io.c  piezomag.c  private.c  strike_slip.c  tensile_opening.c  util.c  utils.c
work/: calcomp.sh  dip.eps  example_params.data  results.eps  strike.eps  tensile.eps
